#50 ajout des tests unitaires